...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.userstory.admin.AdminActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:tabIndicatorColor="@color/teal_200"
        app:tabSelectedTextColor="@color/teal_200" />
...
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="648dp" />

    <Button
        android:id="@+id/exit_admin_mode_button"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#2694AF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="退出管理员模式"
        app:iconPadding="0dp" />

</LinearLayout>


