<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdLeaderShipFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="708dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">
            <Button
                android:id="@+id/button_save2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="保存"
                android:visibility="gone" />
            <TextView
                android:id="@+id/text_view_leader_ship_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_leadership_add"
                android:layout_width="match_parent"
                android:layout_height="601dp"
                android:padding="16dp"
                android:visibility="visible" />



        </LinearLayout>
    </ScrollView>
</FrameLayout>